# pffft

./: CMakeLists.txt  README.md  pffft.c  pffft.hpp
.github/workflows/: build-cmake.yml
src-test/: CMakeLists.txt  compiles.cpp  main.cpp  sine.cpp
